--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -510,6 +510,7 @@ workflows:
       - packet-destroy:
           requires:
             - "packet-test-basic-usecase"
+            - "packet-test-usecase-ipv6"
             - "packet-test-recover"
             - "packet-test-bench"
       - docker-push-latest:
